Basically done, but need to fix some pre tab and alignment when screen is shrunk for the additional info section

--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,16 @@ h3 {
 .no-margin{
     margin-bottom: 0;
 }
+.tab {
+    margin: 0;
+    padding: 0;
+}
+
+/* get in touch section characters next to icons */
+.get-in-touch {
+    font-family: 'Ubuntu', sans-serif;
+    color: #393b44;
+}
 
 /* INDIVIDUAL ID */
 
